# Dispatcher

./: .gitignore  README.md  dispatcher.py  pyproject.toml  test.py
tests/: test.py  test_class.py
