[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-args-dispatcher"
authors = [
    {name = "Andrea Moro", email = "info@andreamoro.eu"},
]
description = "A multi-arguments dispatcher based on a signature introspection approach."
version = "0.3.2"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "GNU-3"}
keywords = ["arguments dispatcher", "multiple", "arguments", "multiple arguments"]

